testing/macro-tests/tests/ui/generated_requires_optional_timestamp.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_optional_timestamp.rs:21:21
   |
21 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
